@@ -923,6 +923,7 @@ lang.c.indent.indenters (case|[{\[(]$)
 lang.c.indent.unindenters (case|^\s+[\]})])
 lang.c.indent.preventers (\".+?[^\\]\")|('.+?[^\\]')|(\/\/.*)
 lang.c.indent.ignore ^(.+:|\s*?)$
+lang.c.indent.not_indented ^\s*#
 lang.c.context.ignore ^(.+:|\s*\{?)$
 
 # Configuration files
