@@ -12,6 +12,7 @@ Diakonos Changelog
 - Added configuration setting inheritance.
 - Added find.show_context_after setting.
 - Added view.column_markers.
+- Added lang.____.indent.not_indented setting.
 - Several bugs fixed.
 
 0.8.7
